--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ DB_HOST=localhost
 DB_NAME="Tour and Travel"
 DB_PASSWORD=baby@2025
 DB_PORT=5432
-EMAIL_USER=07230042.sherubtse@gmail.com
+EMAIL_USER=swa27091@gmail.com
 ADMIN_EMAIL=sawa@gmail.com
 ADMIN_PASS=123456
-EMAIL_PASS=mfbq pqll fhzo onpu
+EMAIL_PASS=wppiifnvubpwcsqg
 SESSION_SECRET=super_secret_key_here
