--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # PostgreSQL database config
-PORT=5432
+PORT=5000
 DB_USER=postgres
 DB_HOST=localhost
 DB_NAME="Tour and Travel"
@@ -10,3 +10,4 @@ ADMIN_EMAIL=sawa@gmail.com
 ADMIN_PASS=123456
 EMAIL_PASS=wppiifnvubpwcsqg
 SESSION_SECRET=super_secret_key_here
+BASE_URL=http://localhost:5000
